<resources>
    <string name="app_name">Movie Info</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="search">Search</string>
    <string name="movie_thumbnail">Movie thumbnail</string>
    <string name="movie_title">Movie title</string>
    <string name="movie_rate">Movie Rate</string>
    <string name="release_date">Release date</string>
    <string name="movie_language">Movie language</string>
    <string name="movie_popularity">Movie popularity</string>
    <string name="overview">Overview</string>
    <string name="title">Title</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="cast">Cast</string>
    <string name="recommendation">Recommended movies</string>
</resources>