<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/trendingMoviesFragment"
        android:icon="@drawable/ic_trending"
        android:title="@string/trending" />
    <item
        android:id="@+id/popularMoviesFragment"
        android:icon="@drawable/ic_popular"
        android:title="@string/popular" />
    <item
        android:id="@+id/topRatedMoviesFragment"
        android:icon="@drawable/ic_rated"
        android:title="@string/top_rated" />
    <item
        android:id="@+id/upcomingMoviesFragment"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/searchMoviesFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
</menu>