<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detailsToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">


            <TextView
                android:id="@+id/tvOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tvRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:text="@string/release_date"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOriginalTitle" />

            <TextView
                android:id="@+id/tvRecommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommendation"
                android:textColor="@color/colorAccent"
                android:textSize="28sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvRecommend" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_overview"
                android:textColor="@color/colorAccent"
                android:textSize="28sp"
                app:layout_constraintTop_toBottomOf="@id/tvRelease" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/overview" />

            <ProgressBar
                android:id="@+id/pbDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rvRecommendation" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>